// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuButton renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "flex-end",
      "marginBottom": 10.5,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(43, 43, 43, 0.5)",
        "borderRadius": 6,
        "justifyContent": "center",
        "marginRight": 6,
        "textAlign": "center",
      }
    }
  >
    <StyledText
      style={
        Object {
          "marginHorizontal": 12,
          "marginVertical": 6,
        }
      }
    >
      foo
    </StyledText>
  </View>
  <TouchableOpacity
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#2b2b2b",
        "borderRadius": 21,
        "height": 42,
        "justifyContent": "center",
        "textAlign": "center",
        "width": 42,
      }
    }
  >
    <Octicons
      color="#fff"
      name="bar"
      size={16}
    />
  </TouchableOpacity>
</View>
`;

exports[`MenuButton uses a different icon set for the "upload" and "download" icons 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -43,12 +43,12 @@
          \\"textAlign\\": \\"center\\",
          \\"width\\": 42,
        }
      }
    >
-     <Octicons
+     <AntDesign
        color=\\"#fff\\"
-       name=\\"bar\\"
+       name=\\"upload\\"
        size={16}
      />
    </TouchableOpacity>
  </View>"
`;

exports[`MenuButton uses a different icon set for the "upload" and "download" icons 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -43,12 +43,12 @@
          \\"textAlign\\": \\"center\\",
          \\"width\\": 42,
        }
      }
    >
-     <Octicons
+     <AntDesign
        color=\\"#fff\\"
-       name=\\"bar\\"
+       name=\\"download\\"
        size={16}
      />
    </TouchableOpacity>
  </View>"
`;
